crates/cli/tests/snapshots/lib__check@unknown_alternative.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - tests/check/unknown_alternative.nemo
  env:
    NO_COLOR: "1"
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/check/unknown_alternative.nemo
---
success: false
exit_code: 1
----- stdout -----
[07] Error: Unknown type V::Unknown
   ╭─[ tests/check/unknown_alternative.nemo:6:6 ]
   │
 6 │   V::Unknown {};
   │      ───┬───  
   │         ╰───── Unknown type V::Unknown
───╯

[07] Error: Unknown type V::Unknown
   ╭─[ tests/check/unknown_alternative.nemo:9:8 ]
   │
 9 │     V::Unknown _ => {}
   │        ───┬───  
   │           ╰───── Unknown type V::Unknown
───╯


----- stderr -----
Error: "Check failed with 2 errors"
