crates/cli/tests/snapshots/lib__check@unknown_function.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - tests/check/unknown_function.nemo
  env:
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/check/unknown_function.nemo
---
success: false
exit_code: 1
----- stdout -----
[31m[05] Error:[0m Unknown variable unknown
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m tests/check/unknown_function.nemo:2:3 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m2 │[0m [38;5;249m [0m[38;5;249m [0munknown[38;5;249m([0m[38;5;249m)[0m
 [38;5;240m  │[0m   ───┬───  
 [38;5;240m  │[0m      ╰───── Unknown variable unknown
[38;5;246m───╯[0m


----- stderr -----
Error: "Check failed with 1 errors"
