crates/cli/tests/snapshots/lib__check@unknown_struct.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - tests/check/unknown_struct.nemo
  env:
    NO_COLOR: "1"
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/check/unknown_struct.nemo
---
success: false
exit_code: 1
----- stdout -----
[07] Error: Unknown type Unknown
   ╭─[ tests/check/unknown_struct.nemo:2:11 ]
   │
 2 │   let x = Unknown {}
   │           ───┬───  
   │              ╰───── Unknown type Unknown
───╯


----- stderr -----
Error: "Check failed with 1 errors"
