crates/cli/tests/snapshots/lib__check@unknown_type.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - tests/check/unknown_type.nemo
  env:
    NO_COLOR: "1"
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/check/unknown_type.nemo
---
success: false
exit_code: 1
----- stdout -----
[07] Error: Unknown type Unknown
   ╭─[ tests/check/unknown_type.nemo:1:14 ]
   │
 1 │ fn main() -> Unknown {}
   │              ───┬───  
   │                 ╰───── Unknown type Unknown
───╯


----- stderr -----
Error: "Check failed with 1 errors"
