crates/cli/tests/snapshots/lib__run@if.nemo.snap
---
source: crates/cli/tests/lib.rs
expression: output
input_file: crates/cli/tests/run/if.nemo
---
Success: 0
1
2
5
2
3
